@@ -1,3 +1,9 @@
+2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* clock/ckinit.c, include/bsp.h: Eliminate copies of the Configuration
+	Table. Use the RTEMS provided accessor macros to obtain configuration
+	fields.
+
 2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* include/bsp.h: Move interrupt_stack_size field from CPU Table to
